# cv2

./: .gitignore  0.txt  1.txt  2.txt  AdaptiveDiffSegmentator.cpp  AdaptiveDiffSegmentator.h  BinaryTree.cpp  CMakeLists.txt  CVFuns.cpp  CVFuns.cpp~RF167bb8d.TMP  CVFuns.h  Detector.cpp  FPSCounter.cpp  Forest.cpp  HaarFeatures.cpp  OOBE.txt  README.md  Tree.cpp  TreeElements.cpp  cv2.sln  cv2.vcxproj  cv2.vcxproj.filters  lib.h  main.cpp  suppFuns.h  target2Positions.txt  targetPositions.txt  tree.cpp  ДНЕВНИК ПРАКТИКИ.doc  ОТЧЕТ ПО УЧЕБНОЙ ПРАКТИКЕ.doc
stats/: OOBE.txt  methodError.txt
stats/background regions num/: OOBE0.txt  OOBE1.txt  OOBE2.txt  OOBE3.txt  OOBE4.txt  OOBE5.txt  methodError0.txt  methodError1.txt  methodError2.txt  methodError3.txt  methodError4.txt  methodError5.txt  showMethodError.m  showOOBE.m
stats/discard/: OOBE2000.txt  OOBE4000.txt  OOBE5000.txt  OOBE7000.txt  methodError2000.txt  methodError4000.txt  methodError5000.txt  methodError7000.txt  showMethodError.m  showOOBE.m
stats/features num/: OOBE100_new.txt  OOBE10_3.txt  OOBE50_10.txt  methodError100_new.txt  methodError10_3.txt  methodError50_10.txt  showMethodError.m  showOOBE.m
stats/min gini coefficient/: OOBE01.txt  OOBE10.txt  OOBE2.txt  OOBE5.txt  OOBE7.txt  methodError01.txt  methodError10.txt  methodError2.txt  methodError5.txt  methodError7.txt  showMethodError.m  showOOBE.m
stats/min statistics num for divide/: OOBE15.txt  OOBE20.txt  OOBE5.txt  calcMethodError.m  methodError15.txt  methodError20.txt  methodError5.txt  showMethodError.m  showOOBE.m
stats/result/: showMethodError.m  showOOBE.m
stats/trees num/: OOBE201.txt  OOBE25.txt  OOBE75.txt  methodError101.txt  methodError201.txt  showOOBE.m  (+3 more)
theory/: Информация к trudy_2013.docx
ВКР/: ~$Презентация_Димаков_В.С._МП-40.pptx  ~$Р_Димаков_В.С._МП-40.docx  ~WRL1605.tmp  ВКР_Димаков_В.С._МП-40.docx  Презентация_Димаков_В.С._МП-40.pptx  Текст выступления.docx  Что сделано.docx
Книжка выпускника/: AntiplagiatOtzyvSaburova.docx  Knizhka_spravkaaburova.doc  Книжка выпускника_заполненная.doc  Отзыв руководителя.docx  Отзыв руководителя_заполненный.docx
Практика/: ОТЧЕТ ПО УЧЕБНОЙ ПРАКТИКЕ.docx
Преддипломная практика/: Дневник практики.docx  Отчет по преддипломной практике.docx  Презентация_Димаков_В.С._МП-40.pptx
Производственная практика/: SHablon_Jurnala_po_PP_bakalavra.doc  classificationError.m  Дневник практики.docx  Отчет по производственной практике.docx
(+53 files in other folders)
